Admin details added

--- a/dbcreation/src/main/webapp/template/layout.xhtml
+++ b/dbcreation/src/main/webapp/template/layout.xhtml
@@ -32,7 +32,7 @@ body {
 	width: 100px;
 }
 .inputTextWidth {
-  width: 250px;
+  width: 200px;
 }
 .ui-tabs.ui-tabs-top > .ui-tabs-nav {
 	padding: 0.0em;
@@ -44,8 +44,8 @@ body {
 
 <p:layout fullPage="true">
 
-    <p:layoutUnit position="north" size="80">
-        <h:graphicImage value="/images/header.png"  />
+    <p:layoutUnit position="north"  style="border:none">
+        <h:graphicImage value="/images/Nxtgen.jpg"  style="height:100px" />
     </p:layoutUnit>
     
    <!--  <p:layoutUnit position="west" header="menu" size="200">
