Entry screen modifications

--- a/dbcreation/src/main/webapp/template/layout.xhtml
+++ b/dbcreation/src/main/webapp/template/layout.xhtml
@@ -8,8 +8,8 @@
 	<h:outputStylesheet name="/css/app.css" library="css" />
 	<style type="text/css">
 body {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 13px;
 }
 
 .header {
@@ -38,11 +38,11 @@ body {
 .ui-tabs.ui-tabs-top>.ui-tabs-nav {
 	padding: 0.0em;
 }
+
 </style>
 </h:head>
 
 <h:body bgcolor="#ffffff">
-
 	<p:layout fullPage="true">
 		
 		<p:layoutUnit position="north" style="border:none">
